functionlity all complete

--- a/store/templates/hotel/hotel_details.html
+++ b/store/templates/hotel/hotel_details.html
@@ -30,7 +30,7 @@
             {% if request.user.is_authenticated %}
             <a
               href="{% url 'review' hotel.id%}"
-              class="btn btn-block bg-success bg-gradient"
+              class="btn btn-block bg-primary bg-gradient"
               >Add Review</a
             >
             {% endif %}
