--- a/store/templates/hotel/hotel_details.html
+++ b/store/templates/hotel/hotel_details.html
@@ -8,7 +8,7 @@
         <aside class="col-md-6">
           <article class="gallery-wrap">
             <div class="img-big-wrap">
-              <a href="#"><img src="{{product.image.url}}" /></a>
+              <a href="#"><img src="{{hotel.image.url}}" /></a>
             </div>
             <!-- img-big-wrap.// -->
           </article>
