--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
     </script>
   </head>
   <body>
-    <header class="section-header m-10">
+    <header class="section-header">
       <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
         <div class="container">
           <button
@@ -82,12 +82,12 @@
         <!-- container //  -->
       </nav>
 
-      <section class="header-main border-bottom mt-3">
+      <section class="header-main border-bottom">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-2 col-md-3 col-6">
               <a href="" class="brand-wrap">
-                <h4>Chowdhury Hotel</h4>
+                <h4>RoamReserve</h4>
               </a>
               <!-- brand-wrap.// -->
             </div>
