--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
       rel="shortcut icon"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="{% static 'path/to/bootstrap.min.css' %}" />
+    <script src="{% static 'path/to/bootstrap.min.js' %}"></script>
 
     <!-- jQuery -->
     <script
