--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,8 @@
       rel="stylesheet"
       media="only screen and (max-width: 1200px)"
     />
+    <link rel="stylesheet" href="{% static 'path/to/bootstrap.min.css' %}" />
+    <script src="{% static 'path/to/bootstrap.min.js' %}"></script>
 
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
