--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %} {% block body %}
+{% if form.errors %}
+  <div class="alert alert-danger">
+    <strong>Error(s):</strong>
+    <ul>
+      {% for error in form.errors %}
+        <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+{% endif %}
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
   <!-- ============================ COMPONENT REGISTER   ================================= -->
