--- a/store/templates/hotel/hotel_details.html
+++ b/store/templates/hotel/hotel_details.html
@@ -8,7 +8,7 @@
         <aside class="col-md-6">
           <article class="gallery-wrap">
             <div class="img-big-wrap">
-              <a href="#"><img src="{{hotel.image.url}}" /></a>
+              <a href="#"><img src="{{hotel.image.url}}" alt="hotel_image"/></a>
             </div>
             <!-- img-big-wrap.// -->
           </article>
@@ -57,7 +57,8 @@
         <article class="box mb-3">
           <div class="icontext w-100">
             <img
-              src="./images/avatars/avatar1.jpg"
+              src="https://img.freepik.com/premium-vector/man-avatar-profile-picture-vector-illustration_268834-538.jpg"
+              alt="review_image"
               class="img-xs icon rounded-circle"
             />
             <div class="text">
