--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
               reserved!</p>
           </div>
           <div class="col-md-8 text-md-center">
-            <span class="px-2">info@pixsellz.io</span>
+            <span class="px-2">xyz@gmail.com</span>
             <span class="px-2">+879-332-9375</span>
             <span class="px-2">Street name 123, Avanue abc</span>
           </div>
